added textarea support

--- a/src/app/views/demo.html
+++ b/src/app/views/demo.html
@@ -55,6 +55,12 @@
         <input type="text" ng-model="user.asynccustom" custom="asyncCustom"/>
     </md-input-container>        
 
+
+    <md-input-container class="md-block">
+        <label>Required Textarea</label>
+        <textarea ng-model="user.requiredtextarea" required></textarea>
+    </md-input-container>
+
     <div class="button-toolbar" layout="row" layout-align="end center">
         <md-button type="submit" class="md-primary">Create</md-button>
     </div>
