--- a/src/app/index.html
+++ b/src/app/index.html
@@ -15,6 +15,8 @@
     <!-- build:css(.tmp) styles/main.css -->
     <link rel="stylesheet" href="styles/main.css">
     <!-- endbuild -->
+
+    <link rel="stylesheet" href="styles/directives/validate.css">
   </head>
   <body class="ng-cloak">
 
