--- a/src/app/views/demo.html
+++ b/src/app/views/demo.html
@@ -53,13 +53,24 @@
     <md-input-container class="md-block">
         <label>Asynchronous Custom</label>
         <input type="text" ng-model="user.asynccustom" custom="asyncCustom"/>
-    </md-input-container>        
-
+    </md-input-container>
 
     <md-input-container class="md-block">
         <label>Required Textarea</label>
         <textarea ng-model="user.requiredtextarea" required></textarea>
     </md-input-container>
+
+    <div layout="row">
+        <md-input-container flex>
+            <label>Password</label>
+            <input type="text" ng-model="user.password1">
+        </md-input-container>
+
+        <md-input-container flex>
+            <label>Password Confirm</label>
+            <input type="text" ng-model="user.password2" compare="user.password1" compare-message="Passwords do not match">
+        </md-input-container>
+    </div>
 
     <div class="button-toolbar" layout="row" layout-align="end center">
         <md-button type="submit" class="md-primary">Create</md-button>
