added date validateion

--- a/src/app/styles/main.scss
+++ b/src/app/styles/main.scss
@@ -5,3 +5,4 @@
 @import "globals/variables";
 @import "globals/elements";
 @import "globals/layouts";
+@import '../bower_components/fs-angular-lister/dist/lister';
