--- a/src/app/views/demo.html
+++ b/src/app/views/demo.html
@@ -72,6 +72,11 @@
         </md-input-container>
     </div>
 
+    <fs-lister ls-options="listerConf" ls-instance="listerInstance"></fs-lister>
+
+
+
+
     <div class="button-toolbar" layout="row" layout-align="end center">
         <md-button type="submit" class="md-primary">Create</md-button>
     </div>
