--- a/src/app/index.html
+++ b/src/app/index.html
@@ -35,6 +35,9 @@
     <script src="bower_components/angular-aria/angular-aria.js"></script>
     <script src="bower_components/angular-messages/angular-messages.js"></script>
     <script src="bower_components/angular-material/angular-material.js"></script>
+    <script src="bower_components/ngstorage/ngStorage.js"></script>
+    <script src="bower_components/fs-angular-store/dist/store.js"></script>
+    <script src="bower_components/fs-angular-lister/dist/lister.js"></script>
     <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
     <!-- endbower -->    
     <!-- endbuild -->
