--- a/src/app/views/demo.html
+++ b/src/app/views/demo.html
@@ -1,102 +1,105 @@
-<a href ng-click="show = !show">Toogle</a>
+<a href ng-click="hide = !hide">Toogle</a>
 <form fs-validate="submit()" fs-instance="formInstance">
 
     <md-input-container class="md-block">
-        <label>Dropdown</label>        
+        <label>Dropdown</label>
         <md-select ng-model="select" required="required">
           <md-option ng-repeat="value in [{ id: 1, name: 'One' },{ id: 2, name: 'Two' }]" value="{{value.id}}">
             {{value.name}}
           </md-option>
         </md-select>
     </md-input-container>
-<div ng-show="show">
-    <md-input-container class="md-block">
-        <label>Required</label>
-        <input type="text" ng-model="user.required" required>
-    </md-input-container>
-</div>
-    <md-input-container class="md-block">
-        <label>Email</label>
-        <input type="text" ng-model="user.email" email>
-    </md-input-container>
+
+    <div ng-hide="hide">
+
+
+        <md-input-container class="md-block">
+            <label>Email</label>
+            <input type="text" ng-model="user.email" email>
+        </md-input-container>
+
+      <!-- <md-input-container class="md-block">
+            <label>Required</label>
+            <input type="text" ng-model="user.required" required>
+        </md-input-container>
+
+
+        <md-input-container class="md-block">
+            <label>Email &amp; Required</label>
+            <input type="text" ng-model="user.emailrequired" required email>
+        </md-input-container>
+
+        <md-input-container class="md-block">
+            <label>Min Number</label>
+            <input type="number" min="50" ng-model="user.min" />
+        </md-input-container>
+
+        <md-input-container class="md-block">
+            <label>Max Number</label>
+            <input type="number" max="100" ng-model="user.max" />
+        </md-input-container>
+
+        <md-input-container class="md-block">
+            <label>Range</label>
+            <input type="number" min="10" max="100" ng-model="user.range" range/>
+        </md-input-container>
+
+        <md-input-container class="md-block">
+            <label>Min Length</label>
+            <input type="text" minlength="10" ng-model="user.minlength" />
+        </md-input-container>
+
+        <md-input-container class="md-block">
+            <label>Max Length</label>
+            <input type="text" maxlength="10" ng-model="user.maxlength" />
+        </md-input-container>
+
+        <md-input-container class="md-block">
+            <label>Phone</label>
+            <input type="tel" ng-model="user.phone" tel-message="Invalid phone number!!!"/>
+        </md-input-container>
+
+        <md-input-container class="md-block">
+            <label>Synchronous Custom</label>
+            <input type="text" ng-model="user.synccustom" custom="syncCustom" custom-message="The valid value is 'hello'"/>
+        </md-input-container> -->
+         <md-input-container class="md-block">
+            <label>Asynchronous Custom</label>
+            <input type="text" ng-model="user.asynccustom" custom="asyncCustom"/>
+        </md-input-container>
 <!--
-    <md-input-container class="md-block">
-        <label>Email &amp; Required</label>
-        <input type="text" ng-model="user.emailrequired" required email>
-    </md-input-container>
-
-    <md-input-container class="md-block">
-        <label>Min Number</label>
-        <input type="number" min="50" ng-model="user.min" />
-    </md-input-container>
-
-    <md-input-container class="md-block">
-        <label>Max Number</label>
-        <input type="number" max="100" ng-model="user.max" />
-    </md-input-container>        
-
-    <md-input-container class="md-block">
-        <label>Range</label>
-        <input type="number" min="10" max="100" ng-model="user.range" range/>
-    </md-input-container>
-
-    <md-input-container class="md-block">
-        <label>Min Length</label>
-        <input type="text" minlength="10" ng-model="user.minlength" />
-    </md-input-container>
-
-    <md-input-container class="md-block">
-        <label>Max Length</label>
-        <input type="text" maxlength="10" ng-model="user.maxlength" />
-    </md-input-container>
-
-    <md-input-container class="md-block">
-        <label>Phone</label>
-        <input type="tel" ng-model="user.phone" tel-message="Invalid phone number!!!"/>
-    </md-input-container>
-
-    <md-input-container class="md-block">
-        <label>Synchronous Custom</label>
-        <input type="text" ng-model="user.synccustom" custom="syncCustom" custom-message="The valid value is 'hello'"/>
-    </md-input-container>
-
-    <md-input-container class="md-block">
-        <label>Asynchronous Custom</label>
-        <input type="text" ng-model="user.asynccustom" custom="asyncCustom"/>
-    </md-input-container>
-
-    <md-input-container class="md-block">
-        <label>Asynchronous Custom Submit</label>
-        <input type="text" ng-model="user.asynccustomsubmit" custom-submit="asyncCustomSubmit"/>
-    </md-input-container>  
-
-    <md-input-container class="md-block">
-        <label>Required Textarea</label>
-        <textarea ng-model="user.requiredtextarea" required></textarea>
-    </md-input-container>
-
-    <div layout="row">
-        <md-input-container flex>
-            <label>Password</label>
-            <input type="text" ng-model="user.password1">
+        <md-input-container class="md-block">
+            <label>Asynchronous Custom Submit</label>
+            <input type="text" ng-model="user.asynccustomsubmit" custom-submit="asyncCustomSubmit"/>
         </md-input-container>
 
-        <md-input-container flex>
-            <label>Password Confirm</label>
-            <input type="text" ng-model="user.password2" compare="user.password1" compare-message="Passwords do not match">
+        <md-input-container class="md-block">
+            <label>Required Textarea</label>
+            <textarea ng-model="user.requiredtextarea" required></textarea>
         </md-input-container>
-    </div>
 
-
-    <md-checkbox-container required>
-        <label>Checkboxes</label>
         <div layout="row">
-            <md-checkbox ng-model="check[$index]" name="checkbox_{{$index}}" aria-label="Checkbox {{$index}}" ng-repeat="checkbox in checkboxes">
-                {{checkbox.name}}
-            </md-checkbox>
+            <md-input-container flex>
+                <label>Password</label>
+                <input type="text" ng-model="user.password1">
+            </md-input-container>
+
+            <md-input-container flex>
+                <label>Password Confirm</label>
+                <input type="text" ng-model="user.password2" compare="user.password1" compare-message="Passwords do not match">
+            </md-input-container>
         </div>
-    </md-checkbox-container>
--->
+
+
+        <md-checkbox-container required>
+            <label>Checkboxes</label>
+            <div layout="row">
+                <md-checkbox ng-model="check[$index]" name="checkbox_{{$index}}" aria-label="Checkbox {{$index}}" ng-repeat="checkbox in checkboxes">
+                    {{checkbox.name}}
+                </md-checkbox>
+            </div>
+        </md-checkbox-container> -->
+    </div>
 <!--
     <fs-lister ls-options="listerConf" ls-instance="listerInstance"></fs-lister>
 -->
