--- a/src/app/views/demo.html
+++ b/src/app/views/demo.html
@@ -18,7 +18,7 @@
             <input type="text" ng-model="user.email" email>
         </md-input-container>
 
-      <!-- <md-input-container class="md-block">
+     <md-input-container class="md-block">
             <label>Required</label>
             <input type="text" ng-model="user.required" required>
         </md-input-container>
@@ -53,7 +53,7 @@
             <label>Max Length</label>
             <input type="text" maxlength="10" ng-model="user.maxlength" />
         </md-input-container>
-
+ <!--
         <md-input-container class="md-block">
             <label>Phone</label>
             <input type="tel" ng-model="user.phone" tel-message="Invalid phone number!!!"/>
