--- a/src/app/index.html
+++ b/src/app/index.html
@@ -37,7 +37,11 @@
     <script src="bower_components/angular-material/angular-material.js"></script>
     <script src="bower_components/ngstorage/ngStorage.js"></script>
     <script src="bower_components/fs-angular-store/dist/store.js"></script>
+    <script src="bower_components/fs-angular-array/dist/array.js"></script>
+    <script src="bower_components/angular-sortable-view/src/angular-sortable-view.js"></script>
+    <script src="bower_components/moment/moment.js"></script>
     <script src="bower_components/fs-angular-lister/dist/lister.js"></script>
+    <script src="bower_components/fs-angular-util/dist/util.js"></script>
     <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
     <!-- endbower -->    
     <!-- endbuild -->
