--- a/src/app/views/demo.html
+++ b/src/app/views/demo.html
@@ -13,10 +13,16 @@
     <div ng-hide="hide">
 
 
-        <md-input-container class="md-block">
-            <label>Email</label>
-            <input type="text" ng-model="user.email" email>
-        </md-input-container>
+    <md-input-container class="md-block">
+        <label>Email</label>
+        <input type="text" ng-model="user.email" email>
+    </md-input-container>
+
+
+    <md-input-container class="md-block">
+        <label>Phone</label>
+        <input type="text" ng-model="user.tel" phone>
+    </md-input-container>
 
      <md-input-container class="md-block">
             <label>Required</label>
