--- a/src/app/index.html
+++ b/src/app/index.html
@@ -41,6 +41,7 @@
     <script src="bower_components/angular-sortable-view/src/angular-sortable-view.js"></script>
     <script src="bower_components/moment/moment.js"></script>
     <script src="bower_components/fs-angular-lister/dist/lister.js"></script>
+    <script src="bower_components/fs-angular-math/dist/math.js"></script>
     <script src="bower_components/fs-angular-util/dist/util.js"></script>
     <script src="bower_components/fs-angular-alert/dist/alert.js"></script>
     <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
