--- a/src/app/views/demo.html
+++ b/src/app/views/demo.html
@@ -1,6 +1,25 @@
 <a href ng-click="hide = !hide">Toogle</a>
 <form fs-validate="submit()" fs-instance="formInstance">
 
+    <div ng-hide="hide">
+
+    <md-input-container class="md-block">
+        <label>Numeric</label>
+        <input type="text" ng-model="user.numeric" numeric>
+    </md-input-container>
+
+    <md-input-container class="md-block">
+        <label>Integer</label>
+        <input type="text" ng-model="user.integer" integer>
+    </md-input-container>
+
+    <md-input-container class="md-block">
+        <label>Currency</label>
+        <input type="text" ng-model="user.currency" currency="USD">
+    </md-input-container>
+
+
+
     <md-input-container class="md-block">
         <label>Dropdown</label>
         <md-select ng-model="select" required="required">
@@ -10,14 +29,10 @@
         </md-select>
     </md-input-container>
 
-    <div ng-hide="hide">
-
-
     <md-input-container class="md-block">
         <label>Email</label>
         <input type="text" ng-model="user.email" email>
     </md-input-container>
-
 
     <md-input-container class="md-block">
         <label>Phone</label>
@@ -59,7 +74,7 @@
             <label>Max Length</label>
             <input type="text" maxlength="10" ng-model="user.maxlength" />
         </md-input-container>
- <!--
+
         <md-input-container class="md-block">
             <label>Phone</label>
             <input type="tel" ng-model="user.phone" tel-message="Invalid phone number!!!"/>
@@ -68,12 +83,12 @@
         <md-input-container class="md-block">
             <label>Synchronous Custom</label>
             <input type="text" ng-model="user.synccustom" custom="syncCustom" custom-message="The valid value is 'hello'"/>
-        </md-input-container> -->
+        </md-input-container>
          <md-input-container class="md-block">
             <label>Asynchronous Custom</label>
             <input type="text" ng-model="user.asynccustom" custom="asyncCustom"/>
         </md-input-container>
-<!--
+
         <md-input-container class="md-block">
             <label>Asynchronous Custom Submit</label>
             <input type="text" ng-model="user.asynccustomsubmit" custom-submit="asyncCustomSubmit"/>
@@ -104,7 +119,7 @@
                     {{checkbox.name}}
                 </md-checkbox>
             </div>
-        </md-checkbox-container> -->
+        </md-checkbox-container>
     </div>
 <!--
     <fs-lister ls-options="listerConf" ls-instance="listerInstance"></fs-lister>
