Added add control listener that registers controls when angular adds the control to the form

--- a/src/app/index.html
+++ b/src/app/index.html
@@ -44,6 +44,7 @@
     <script src="bower_components/fs-angular-math/dist/math.js"></script>
     <script src="bower_components/fs-angular-util/dist/util.js"></script>
     <script src="bower_components/fs-angular-alert/dist/alert.js"></script>
+    <script src="bower_components/fs-angular-api/dist/api.js"></script>
     <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
@@ -55,6 +56,7 @@
 
     <script src="scripts/directives/directive.js"></script>
     <script src="scripts/services/service.js"></script>
+    <script src="scripts/services/dummy.js"></script>
 
     <script src="scripts/filters/filter.js"></script>
 
