added interpolate for message rendering ng-show on ng-messages to avoid ng-animate opacity issue

--- a/src/app/views/demo.html
+++ b/src/app/views/demo.html
@@ -67,7 +67,7 @@
 
         <md-input-container class="md-block">
             <label>Min Length</label>
-            <input type="text" minlength="10" ng-model="user.minlength" />
+            <input type="text" minlength="10" ng-model="user.minlength"  required />
         </md-input-container>
 
         <md-input-container class="md-block">
