Prevalidate the form. Avoid required $error.required = true

--- a/src/app/index.html
+++ b/src/app/index.html
@@ -17,6 +17,7 @@
     <!-- endbuild -->
 
     <link rel="stylesheet" href="styles/directives/validate.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons|Roboto" rel="stylesheet">
   </head>
   <body class="ng-cloak">
 
