added custom attr() get function - element.attr('required') returns 'required'

--- a/src/app/styles/main.scss
+++ b/src/app/styles/main.scss
@@ -6,3 +6,4 @@
 @import "globals/elements";
 @import "globals/layouts";
 @import '../bower_components/fs-angular-lister/dist/lister';
+@import "../bower_components/fs-boilerplate-styles/dist/material-1.1.1.scss";
