--- a/src/app/views/demo.html
+++ b/src/app/views/demo.html
@@ -82,8 +82,8 @@
         </md-input-container>
 
         <md-input-container class="md-block">
-            <label>Phone</label>
-            <input type="tel" ng-model="user.phone" tel-message="Invalid phone number!!!"/>
+            <label>Equal Length</label>
+            <input type="text" ng-model="user.equallength" equallength="5"/>
         </md-input-container>
 
         <md-input-container class="md-block">
