--- a/src/app/index.html
+++ b/src/app/index.html
@@ -10,6 +10,7 @@
     <!-- build:css(.) styles/vendor.css -->
     <!-- bower:css -->
     <link rel="stylesheet" href="bower_components/angular-material/angular-material.css" />
+    <link rel="stylesheet" href="bower_components/fs-angular-validate/dist/validate.css" />
     <link rel="stylesheet" href="bower_components/fs-boilerplate-styles/dist/main.css" />
     <!-- endbower -->
     <!-- endbuild -->
@@ -47,6 +48,9 @@
     <script src="bower_components/fs-angular-lister/dist/lister.js"></script>
     <script src="bower_components/fs-angular-alert/dist/alert.js"></script>
     <script src="bower_components/fs-angular-api/dist/api.js"></script>
+    <script src="bower_components/fs-angular-validate/dist/validate.js"></script>
+    <script src="bower_components/fs-angular-phone/dist/phone.js"></script>
+    <script src="bower_components/fs-angular-time/dist/time.js"></script>
     <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
