--- a/src/app/views/demo.html
+++ b/src/app/views/demo.html
@@ -14,7 +14,7 @@
 
         <md-input-container class="md-block">
             <label>Dynamic Required</label>
-            <input type="text" ng-model="user.required" required="required1">
+            <input type="text" ng-model="user.required" required-condition="required1">
         </md-input-container>
 
 
@@ -38,7 +38,7 @@
 
         <md-input-container class="md-block">
             <label>Dropdown</label>
-            <md-select ng-model="select" required="required1">
+            <md-select ng-model="select" required-condition="required1">
               <md-option ng-repeat="value in [{ id: 1, name: 'One' },{ id: 2, name: 'Two' }]" value="{{value.id}}">
                 {{value.name}}
               </md-option>
@@ -77,7 +77,7 @@
 
         <md-input-container class="md-block">
             <label>Min Length</label>
-            <input type="text" minlength="10" ng-model="user.minlength" required="required1" />
+            <input type="text" minlength="10" ng-model="user.minlength" required-condition="required1" />
         </md-input-container>
 
         <md-input-container class="md-block">
@@ -106,7 +106,7 @@
 
         <md-input-container class="md-block">
             <label>Required Textarea</label>
-            <textarea ng-model="user.requiredtextarea" required="required1"></textarea>
+            <textarea ng-model="user.requiredtextarea" required-condition="required1"></textarea>
         </md-input-container>
 
         <div layout="row">
