--- a/src/app/index.html
+++ b/src/app/index.html
@@ -43,6 +43,7 @@
     <script src="bower_components/fs-angular-util/dist/util.js"></script>
     <script src="bower_components/ngstorage/ngStorage.js"></script>
     <script src="bower_components/fs-angular-store/dist/store.js"></script>
+    <script src="bower_components/fs-angular-modal/dist/modal.js"></script>
     <script src="bower_components/angular-sortable-view/src/angular-sortable-view.js"></script>
     <script src="bower_components/moment/moment.js"></script>
     <script src="bower_components/fs-angular-lister/dist/lister.js"></script>
