--- a/src/app/views/demo.html
+++ b/src/app/views/demo.html
@@ -3,7 +3,7 @@
 
 <form fs-validate="submit($event)" id="form" fs-instance="formInstance">
 
-<!--
+
     <div ng-hide="hide">
 
 
@@ -11,7 +11,7 @@
             <label>Always Required</label>
             <input type="text" ng-model="user.required" required>
         </md-input-container>
-
+<!--
         <md-input-container class="md-block">
             <label>Dynamic Required</label>
             <input type="text" ng-model="user.required" required-condition="required1">
@@ -131,10 +131,10 @@
             </div>
         </md-checkbox-container>
 
-        <xxxfs-lister ls-options="listerConf"></xxxfs-lister>
+        <xxxfs-lister ls-options="listerConf"></xxxfs-lister> -->
     </div>
 
- -->
+
     <div class="button-toolbar" layout="row" layout-align="end center">
         <md-button type="submit" class="md-primary md-raised" name="submit-button">Submit</md-button>
         <md-button type="button" ng-click="reset()" class="md-primary  md-raised">Reset</md-button>
