removed ng-messages. there was a change in ng-messages and it is better to do it ourself.

--- a/src/app/index.html
+++ b/src/app/index.html
@@ -11,6 +11,7 @@
     <!-- bower:css -->
     <link rel="stylesheet" href="bower_components/angular-material/angular-material.css" />
     <link rel="stylesheet" href="bower_components/fs-angular-validate/dist/validate.css" />
+    <link rel="stylesheet" href="bower_components/fs-angular-datetime/dist/datetime.css" />
     <link rel="stylesheet" href="bower_components/fs-boilerplate-styles/dist/main.css" />
     <!-- endbower -->
     <!-- endbuild -->
@@ -52,6 +53,7 @@
     <script src="bower_components/fs-angular-validate/dist/validate.js"></script>
     <script src="bower_components/fs-angular-phone/dist/phone.js"></script>
     <script src="bower_components/fs-angular-time/dist/time.js"></script>
+    <script src="bower_components/fs-angular-datetime/dist/datetime.js"></script>
     <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
