--- a/src/app/views/demo.html
+++ b/src/app/views/demo.html
@@ -129,7 +129,7 @@
 
          -->
 
-        <md-input-container class="md-block">
+<!--         <md-input-container class="md-block">
             <label>Synchronous Validator</label>
             <input type="text" ng-model="user.validator" validator="validator($value,user)"/>
         </md-input-container>
@@ -160,7 +160,7 @@
             <label>Asynchronous Custom Submit (Legacy)</label>
             <input type="text" ng-model="user.asynccustomsubmit" custom-submit="asyncCustomSubmit"/>
         </md-input-container>
-
+ -->
 
 
 
