--- a/src/app/index.html
+++ b/src/app/index.html
@@ -10,7 +10,9 @@
     <!-- build:css(.) styles/vendor.css -->
     <!-- bower:css -->
     <link rel="stylesheet" href="bower_components/angular-material/angular-material.css" />
+    <link rel="stylesheet" href="bower_components/fs-angular-modal/dist/modal.css" />
     <link rel="stylesheet" href="bower_components/fs-angular-datetime/dist/datetime.css" />
+    <link rel="stylesheet" href="bower_components/angular-loading-bar/build/loading-bar.css" />
     <link rel="stylesheet" href="bower_components/fs-angular-validate/dist/validate.css" />
     <link rel="stylesheet" href="bower_components/fs-boilerplate-styles/dist/main.css" />
     <!-- endbower -->
@@ -44,12 +46,16 @@
     <script src="bower_components/fs-angular-util/dist/util.js"></script>
     <script src="bower_components/ngstorage/ngStorage.js"></script>
     <script src="bower_components/fs-angular-store/dist/store.js"></script>
+    <script src="bower_components/fs-angular-element/dist/element.js"></script>
     <script src="bower_components/fs-angular-modal/dist/modal.js"></script>
+    <script src="bower_components/fs-angular-alert/dist/alert.js"></script>
     <script src="bower_components/moment/moment.js"></script>
+    <script src="bower_components/fs-angular-model/dist/model.js"></script>
+    <script src="bower_components/fs-angular-browser/dist/browser.js"></script>
     <script src="bower_components/fs-angular-datetime/dist/datetime.js"></script>
     <script src="bower_components/angular-sortable-view/src/angular-sortable-view.js"></script>
     <script src="bower_components/fs-angular-lister/dist/lister.js"></script>
-    <script src="bower_components/fs-angular-alert/dist/alert.js"></script>
+    <script src="bower_components/angular-loading-bar/build/loading-bar.js"></script>
     <script src="bower_components/fs-angular-api/dist/api.js"></script>
     <script src="bower_components/fs-angular-validate/dist/validate.js"></script>
     <script src="bower_components/fs-angular-phone/dist/phone.js"></script>
